--- a/src/index.css
+++ b/src/index.css
@@ -114,6 +114,8 @@
     align-items: center;
     text-align: center;
     overflow-x: visible;
+
+    transition: 300ms;
 }
 
 .Item:hover {
@@ -121,7 +123,8 @@
     /* width: calc(var(--wu) * 1035); */
     /* transition-delay: 100ms; */
     background-color: var(--pink);
-    transition: 500ms;
+    border-radius: 5px;
+    padding: 10px;
 }
 
 .CheckBox {
@@ -133,6 +136,12 @@
     background-color: var(--blue);
     border: 3px solid var(--black);
     border-radius: 5px;
+    transition: 300ms;
+}
+
+.CheckBox:hover {
+    border-radius: 2px;
+    background-color: var(--green);
 }
 
 .ItemListItemName {
@@ -202,6 +211,7 @@
 .AddNewItemButton:hover {
     height: 65px;
     width: 65px;
+    border-radius: 5px;
     translate: calc(47vw - 5px) calc(-15vh - 5px);
 }
 
@@ -217,6 +227,23 @@
     width: calc(var(--wu) * 725);
     border-radius: 15px;
     margin-left: 2.5vw;
+    transition: 300ms;
+
+    justify-content: center;
+    align-items: center;
+}
+.ItemViewContainer:hover,
+.NewItemViewContainer:hover,
+.EditItemViewContainer:hover,
+.CostViewContainer:hover {
+    border-radius: 5px;
+    padding-bottom: 10px;
+}
+.ItemViewContainer:hover .OptionBar,
+.NewItemViewContainer:hover .OptionBar,
+.EditItemViewContainer:hover .OptionBar,
+.CostViewContainer:hover .OptionBar{
+    border-radius: 5px;
 }
 
 .NameAndCostContainer {
@@ -229,8 +256,13 @@
 
     align-items: center;
     justify-content: center;
-}
 
+    transition: 300ms;
+}
+.NewItemViewContainer .NameAndCostContainer:hover , .EditItemViewContainer .NameAndCostContainer:hover{
+    width: calc(var(--wu) * 700);
+    border-radius: 10px;
+}
 .CostViewLabelAndCostContainer {
     display: flex;
     flex-direction: row;
@@ -252,28 +284,38 @@
     width: calc(var(--wu) * 426);
 
     color: var(--pink);
-
     font-size: 4vh;
 }
 
 
 
-
-
-
-.NewItemName label , .EditItemName label{
+.NewItemName label,
+.EditItemName label {
     display: none;
 }
 
-.NewItemName input , .EditItemName input{
+.NewItemNameInput,
+.EditItemNameInput {
     background-color: var(--black);
-    width: 100%;
+    box-sizing: content-box;
+    width: 90%;
     color: var(--pink);
     border: none;
     font-size: 4vh;
+
+    transition: 100ms;
+
+}
+.NewItemNameInput:hover,
+.EditItemNameInput:hover {
+    border: 3px solid var(--pink);
+    border-radius: 5px;
+    padding: 5px;
+    padding-right: 0px;
 }
 
-.NewItemName input::placeholder , .EditItemName input::placeholder{
+.NewItemNameInput::placeholder,
+.EditItemNameInput::placeholder {
     color: var(--pink);
 }
 
@@ -293,21 +335,31 @@
     font-weight: 600;
 }
 
-.NewItemCost label , .EditItemCost label{
+.NewItemCost label,
+.EditItemCost label {
     display: none;
 }
 
-.NewItemCost input , .EditItemCost input{
+.NewItemCostInput,
+.EditItemCostInput {
     background-color: var(--pink);
-    width: 100%;
+    width: 95%;
     text-align: center;
     font-size: 4vh;
     font-weight: 600;
     border: none;
     border: none;
+    transition: 100ms;
 }
-
-.NewItemCost input::placeholder , .EditItemCost input::placeholder{
+.NewItemCostInput:hover,
+.EditItemCostInput:hover {
+    border: 3px solid var(--black);
+    border-radius: 5px;
+    padding: 5px;
+ 
+}
+.NewItemCostInput::placeholder,
+.EditItemCostInput::placeholder {
     color: var(--black);
 }
 
@@ -316,7 +368,7 @@
 .EditItemDescription {
     display: flex;
     height: calc(var(--hu) * 387);
-    width: calc(var(--wu) * 675);
+    width: calc(var(--wu) * 700);
     padding: 5px;
     color: var(--black);
 
@@ -324,20 +376,34 @@
     font-weight: 450;
 }
 
-.NewItemDescription label , .EditItemDescription label{
+.NewItemDescription label,
+.EditItemDescription label {
     display: none;
 }
 
-.NewItemDescription textarea , .EditItemDescription textarea{
+.NewItemDescriptionInput,
+.EditItemDescriptionInput {
     background-color: var(--pink);
+    box-sizing: content-box;
     color: var(--black);
     border: none;
     width: 100%;
 
     font-size: 3vh;
+    transition: 100ms;
 }
 
-.NewItemDescription textarea::placeholder , .EditItemDescription textarea::placeholder {
+.NewItemDescriptionInput:hover,
+.EditItemDescriptionInput:hover {
+    
+    transition-delay: 300ms;
+    border: 3px solid var(--black);
+    border-radius: 5px;
+    padding: 5px;
+}
+
+.NewItemDescriptionInput::placeholder,
+.EditItemDescriptionInput::placeholder {
     color: var(--black);
 }
 
@@ -355,21 +421,48 @@
     text-align: center;
     justify-content: center;
     align-items: center;
-    
+
     font-size: 3vh;
+    transition: 100ms;
 
 }
+.NewItemLinkInput,
+.EditItemLinkInput {
+    display: flex;
+    height: calc(var(--hu) * 65);
+    background-color: var(--black);
+    color: var(--blue);
+    margin-top: 3vh;
 
-.NewItemLink label , .EditItemLink label{
+    text-align: center;
+    justify-content: center;
+    align-items: center;
+
+    font-size: 3vh;
+
+    transition: 100ms;
+}
+.NewItemLinkInput:hover,
+.EditItemLinkInput:hover {
+   border-radius: 5px;
+   border: 2px solid var(--blue);
+   padding-left: 10px;
+   padding-right: 10px;
+}
+
+.NewItemLink label,
+.EditItemLink label {
     display: none;
 }
 
-.NewItemLink input , .EditItemLink input{
+.NewItemLinkInput,
+.EditItemLinkInput {
     margin-top: 0px;
     border: none;
 }
 
-.NewItemLink input::placeholder , .EditItemLink input::placeholder{
+.NewItemLink input::placeholder,
+.EditItemLink input::placeholder {
     color: var(--blue)
 }
 
@@ -391,6 +484,7 @@
 
     font-weight: 500;
 
+    transition: 300ms;
 }
 
 
@@ -401,6 +495,7 @@
     justify-content: center;
 
 }
+
 .OptionBarButton1 button {
     background-color: var(--black);
     border: 3px solid var(--yellow);
@@ -418,6 +513,7 @@
     align-items: center;
     justify-content: center;
 }
+
 .OptionBarButton2 button {
     background-color: var(--black);
     border: 3px solid var(--yellow);
@@ -463,7 +559,7 @@
     background-color: var(--black);
 
     color: var(--pink);
-    
+
     padding-left: 10px;
 }
 
@@ -492,16 +588,18 @@
     align-items: center;
     justify-content: center;
 }
+
 .EditCategoryButton {
     display: flex;
     width: calc(var(--wu) * 306);
     font-size: 2vh;
     text-align: center;
     align-items: center;
-    justify-content:left;
+    justify-content: left;
 }
 
-.AddCategoryButton button , .EditCategoryButton button {
+.AddCategoryButton button,
+.EditCategoryButton button {
     display: flex;
     background-color: var(--black);
     color: var(--yellow);
@@ -510,13 +608,16 @@
     border-radius: 10px;
     transition: 300ms;
 }
-.AddCategoryButton button:hover, .EditCategoryButton button:hover {
-    
+
+.AddCategoryButton button:hover,
+.EditCategoryButton button:hover {
+
     border: 2px solid var(--yellow);
     padding: 5px;
     border-radius: 5px;
 
 }
+
 .ItemCategoryList::-webkit-scrollbar {
     background-color: orange;
     border-radius: 5px;
@@ -573,7 +674,9 @@
     background-color: var(--yellow);
     /* font-size: 3px; */
     padding: 5px;
+    transition: 200ms;
 }
+
 .ItemListViewItemCategory {
     display: flex;
     opacity: 1;
@@ -586,12 +689,10 @@
     justify-content: center;
     align-items: center;
     padding-left: 10px;
-
-   
-
 }
+
 .ItemListViewItemCategory span {
-    
+
     border: 3px solid var(--yellow);
     padding: 1vh;
     padding-right: 3vw;
@@ -603,9 +704,20 @@
 .ItemCategoryList li:first-child {
     border-radius: 10px 10px 0px 0px;
 }
+
 .ItemCategoryList li:last-child {
     border-radius: 0px 0px 10px 10px;
 }
+
+.ItemCategory:hover {
+    border-radius: 5px;
+}
+.ItemCategoryList li:hover {
+    border-radius: 5px;
+    padding: 7px;
+}
+
+
 .ItemCategory label {
     display: none;
 }
@@ -647,6 +759,7 @@
     font-size: 4vh;
     font-weight: 400;
 }
+
 .TotalCost {
     display: flex;
     width: calc(var(--wu) * calc(725 - 262));
@@ -685,7 +798,7 @@
 }
 
 .CostPerCategoryContainer {
-    
+
     display: flex;
 
     height: calc(var(--hu) * 90);
@@ -707,6 +820,7 @@
     align-items: center;
     justify-content: center;
 }
+
 .CategoryCost {
     display: flex;
     width: 45%;
