--- a/src/index.css
+++ b/src/index.css
@@ -31,7 +31,7 @@
     max-width: 100vw - 100px;
     display: flex;
     flex-direction: row;
-
+    align-items: end;
 }
 
 .Title {
@@ -43,6 +43,14 @@
     border-radius: 0px 0px 15px 0px;
     font-size: 9vh;
     font-weight: 700;
+
+    transition: 300ms;
+
+    overflow: hidden;
+}
+
+.Title:hover {
+    border-radius: 0px 0px 5px 0px;
 }
 
 .Title span {
@@ -51,6 +59,14 @@
     align-items: center;
     justify-content: center;
     margin-left: 4vw;
+    min-width: fit-content;
+}
+
+.TitleText {
+    display: flex;
+    align-items: end;
+    vertical-align: bottom;
+    font-size: 3vh;
 }
 
 .Logo {
@@ -58,6 +74,29 @@
     background-color: var(--darkBlack);
 }
 
+.ViewToggle {
+    display: flex;
+    height: 9vh;
+    padding: 3vh;
+    margin: auto;
+    margin-bottom: 0px;
+    background-color: var(--blue);
+    color: var(--black);
+
+    align-items: center;
+    justify-content: center;
+
+    font-size: 3vh;
+    font-weight: 500;
+    border-radius: 15px;
+
+    transition: 300ms;
+}
+.ViewToggle:hover {
+    border-radius: 5px;
+    margin-bottom: 1vh;
+    padding: 4vh;
+}
 /* content */
 .ContentContainer {
     height: auto;
@@ -232,6 +271,7 @@
     justify-content: center;
     align-items: center;
 }
+
 .ItemViewContainer:hover,
 .NewItemViewContainer:hover,
 .EditItemViewContainer:hover,
@@ -239,10 +279,17 @@
     border-radius: 5px;
     padding-bottom: 10px;
 }
+
 .ItemViewContainer:hover .OptionBar,
 .NewItemViewContainer:hover .OptionBar,
 .EditItemViewContainer:hover .OptionBar,
-.CostViewContainer:hover .OptionBar{
+.CostViewContainer:hover .OptionBar {
+    border-radius: 5px;
+}
+.ItemViewContainer:hover .CostPerCategoryList,
+.NewItemViewContainer:hover .CostPerCategoryList,
+.EditItemViewContainer:hover .CostPerCategoryList,
+.CostViewContainer:hover .CostPerCategoryList {
     border-radius: 5px;
 }
 
@@ -259,10 +306,13 @@
 
     transition: 300ms;
 }
-.NewItemViewContainer .NameAndCostContainer:hover , .EditItemViewContainer .NameAndCostContainer:hover{
+
+.NewItemViewContainer .NameAndCostContainer:hover,
+.EditItemViewContainer .NameAndCostContainer:hover {
     width: calc(var(--wu) * 700);
     border-radius: 10px;
 }
+
 .CostViewLabelAndCostContainer {
     display: flex;
     flex-direction: row;
@@ -306,6 +356,7 @@
     transition: 100ms;
 
 }
+
 .NewItemNameInput:hover,
 .EditItemNameInput:hover {
     border: 3px solid var(--pink);
@@ -342,6 +393,7 @@
 
 .NewItemCostInput,
 .EditItemCostInput {
+    color: var(--black);
     background-color: var(--pink);
     width: 95%;
     text-align: center;
@@ -351,13 +403,15 @@
     border: none;
     transition: 100ms;
 }
+
 .NewItemCostInput:hover,
 .EditItemCostInput:hover {
     border: 3px solid var(--black);
     border-radius: 5px;
     padding: 5px;
- 
+
 }
+
 .NewItemCostInput::placeholder,
 .EditItemCostInput::placeholder {
     color: var(--black);
@@ -395,7 +449,7 @@
 
 .NewItemDescriptionInput:hover,
 .EditItemDescriptionInput:hover {
-    
+
     transition-delay: 300ms;
     border: 3px solid var(--black);
     border-radius: 5px;
@@ -426,6 +480,7 @@
     transition: 100ms;
 
 }
+
 .NewItemLinkInput,
 .EditItemLinkInput {
     display: flex;
@@ -442,12 +497,13 @@
 
     transition: 100ms;
 }
+
 .NewItemLinkInput:hover,
 .EditItemLinkInput:hover {
-   border-radius: 5px;
-   border: 2px solid var(--blue);
-   padding-left: 10px;
-   padding-right: 10px;
+    border-radius: 5px;
+    border: 2px solid var(--blue);
+    padding-left: 10px;
+    padding-right: 10px;
 }
 
 .NewItemLink label,
@@ -713,6 +769,7 @@
 .ItemCategory:hover {
     border-radius: 5px;
 }
+
 .ItemCategoryList li:hover {
     border-radius: 5px;
     padding: 7px;
@@ -742,9 +799,14 @@
 
 .ItemCategoryDeleteButton {
     display: flex;
-    background-color: var(--black);
+    /* background-color: var(--black); */
+    justify-content: center;
+    align-items: center;
+    color: var(--black);
     font-size: 3vh;
     border-radius: 10px;
+    margin: auto;
+    margin-right: 0px;
 }
 
 .CategoryLabel {
@@ -786,7 +848,7 @@
 .CostPerCategoryList {
 
     display: flex;
-
+    flex-direction: column;
     margin: auto;
     margin-bottom: 0px;
 
@@ -795,11 +857,16 @@
 
     background-color: var(--black);
 
+    border: 5px solid var(--black);
     border-radius: 10px 10px 0px 0px;
 
     list-style-type: none;
 
-    justify-content: center;
+    align-items: center;
+
+    transition: 300ms;
+
+    overflow-y: auto;
 }
 
 .CostPerCategoryContainer {
@@ -811,14 +878,25 @@
 
     background-color: var(--green);
 
+    padding-left: 2vh;
+    padding-right: 2vh;
+
     margin-top: 13px;
 
     border-radius: 10px;
 
     justify-content: center;
     align-items: center;
-}
 
+    transition: 300ms;
+}
+.CostPerCategoryContainer:hover {
+    background-color: var(--yellow);
+    padding-left: 0vw;
+    padding-right: 0vw;
+    margin-top: 23px;
+    margin-bottom: 10px;
+}
 .CategoryName {
     display: flex;
     width: 50%;
